cicd/ansible/config-tree/common/etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow udp 53 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow tcp 53 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 53 -j ACCEPT

### tuple ### allow tcp 443 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow any 33443 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 33443 -j ACCEPT
-A ufw6-user-input -p udp --dport 33443 -j ACCEPT

### tuple ### allow any 33555 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 33555 -j ACCEPT
-A ufw6-user-input -p udp --dport 33555 -j ACCEPT

### tuple ### allow any 139 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 139 -j ACCEPT
-A ufw6-user-input -p udp --dport 139 -j ACCEPT

### tuple ### allow any any ::/0 any ::/0 out_tun0
-A ufw6-user-output -o tun0 -j ACCEPT

### tuple ### allow any any ::/0 any ::/0 in_tun0
-A ufw6-user-input -i tun0 -j ACCEPT

### tuple ### allow any any ::/0 any ::/0 in_docker0
-A ufw6-user-input -i docker0 -j ACCEPT

### tuple ### allow any any ::/0 any ::/0 in_weave
-A ufw6-user-input -i weave -j ACCEPT

### tuple ### allow any any ::/0 any ::/0 out_docker0
-A ufw6-user-output -o docker0 -j ACCEPT

### tuple ### allow any any ::/0 any ::/0 out_weave
-A ufw6-user-output -o weave -j ACCEPT

### tuple ### allow any 9100 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 9100 -j ACCEPT
-A ufw6-user-input -p udp --dport 9100 -j ACCEPT

### tuple ### allow udp 137,138 ::/0 any ::/0 Samba - in
-A ufw6-user-input -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### allow tcp 139,445 ::/0 any ::/0 Samba - in
-A ufw6-user-input -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### allow any 6443 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 6443 -j ACCEPT
-A ufw6-user-input -p udp --dport 6443 -j ACCEPT

### tuple ### allow any 22280 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22280 -j ACCEPT
-A ufw6-user-input -p udp --dport 22280 -j ACCEPT

### tuple ### allow any 22443 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22443 -j ACCEPT
-A ufw6-user-input -p udp --dport 22443 -j ACCEPT

### tuple ### allow any 51443 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 51443 -j ACCEPT
-A ufw6-user-input -p udp --dport 51443 -j ACCEPT

### tuple ### allow any 52124 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 52124 -j ACCEPT
-A ufw6-user-input -p udp --dport 52124 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
